force-app/main/default/objects/AnkenInfo__c/AnkenInfo__c.object-meta.xml
<CustomObject>
    <label>案件情報</label>
    <nameField>
        <label>案件情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>