force-app/main/default/objects/AnkenInfo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>案件情報</relationshipLabel>
    <relationshipName>AnkenInfos</relationshipName>
    <type>Lookup</type>
</CustomField>