force-app/main/default/objects/AnkenInfo__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Account__r.Address1__c  &amp;  Account__r.Address2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>住所</label>
    <type>Text</type>
</CustomField>