force-app/main/default/objects/AnkenInfo__c/fields/AnkenID__c.field-meta.xml
<CustomField>
    <fullName>AnkenID__c</fullName>
    <displayFormat>A-{000000}</displayFormat>
    <label>案件ID</label>
    <type>AutoNumber</type>
</CustomField>