force-app/main/default/objects/AnkenInfo__c/fields/AnkenStartDate__c.field-meta.xml
<CustomField>
    <fullName>AnkenStartDate__c</fullName>
    <label>案件開始日</label>
    <type>Date</type>
</CustomField>