force-app/main/default/objects/AnkenInfo__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>案件概要</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>