force-app/main/default/objects/AnkenInfo__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <formula>Account__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web サイト</label>
    <type>Text</type>
</CustomField>